[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/character/tabs/components/AbilityScoreEntry.gd" id="1_0"]
[ext_resource type="Theme" path="res://themes/bg3_theme.tres" id="2_0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 2
border_color = Color(1, 0.843137, 0, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.15, 0.15, 0.15, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.843137, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.9, 0.7, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4"]
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.7, 0.5, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="AbilityScoreEntry" type="PanelContainer"]
layout_mode = 2
custom_minimum_size = Vector2(380, 160)
size_flags_horizontal = 3
size_flags_vertical = 0
clip_contents = false
mouse_filter = 0
theme = ExtResource("2_0")
script = ExtResource("1_0")

[node name="MarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12
alignment = 1

[node name="AbilityNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_minimum_size = Vector2(0, 40)
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "Wisdom"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_1")

[node name="BaseLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Base: 8"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BaseControlsMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 20

[node name="BaseControls" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BaseControlsMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="ButtonMinus" type="Button" parent="MarginContainer/VBoxContainer/BaseControlsMargin/BaseControls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_minimum_size = Vector2(48, 48)
theme_override_font_sizes/font_size = 35
flat = false
text = "-"
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4")

[node name="ButtonPlus" type="Button" parent="MarginContainer/VBoxContainer/BaseControlsMargin/BaseControls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_minimum_size = Vector2(48, 48)
theme_override_font_sizes/font_size = 35
flat = false
text = "+"
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4")

[node name="BonusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "Bonus: +0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "10"
horizontal_alignment = 1
vertical_alignment = 1
